fixed map placecard to remove overflow

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -308,7 +308,6 @@ header.header-transparent {
   color: #3a84df;
   display: block;
   height: 43px;
-  width: 54.7344px;
 }
 
 .placecard__direction-link:hover {
